adicionando rotas de solicitaçao coleta
